# Recipe_Planner

./: .gitignore  Cargo.toml  LICENSE  PROJECT.md  README.md  index.html  mise-release.keystore  package-lock.json  package.json  rewrite.py  scratch.py  shell.nix  tailwind.config.js  test-recipe.tsx
.github/workflows/: android.yml  ci.yml  release.yml
auditoria/: audit.md  dim_01_seguranca_agente1.md  dim_01_seguranca_agente2.md  dim_01_seguranca_tiebreaker.md  dim_02_arq_agente1.html  dim_02_arq_tiebreaker.md  dim_03_qualidade_agente1.md  dim_03_qualidade_agente2.md  dim_03_qualidade_tiebreaker.md  dim_04_testes_agente1.md  dim_04_testes_agente2.md  dim_05_deps_agente1.md  dim_06_perf_agente2.md  dim_07_estetica_agente2.md  dim_08_compliance_agente1.md  dim_08_compliance_agente2.md  dim_09_ideias_agente2.md  dim_10_impl_agente1.md  dim_10_impl_agente2.md  dim_11_aproveitamento.md  dim_12_documentacao.md
crates/core/: Cargo.toml
crates/core/bindings/: ActivityItem.ts  Category.ts  CategoryCost.ts  CategoryInput.ts  CategoryKind.ts  CategoryWaste.ts  CostBreakdown.ts  CostReport.ts  DashboardStats.ts  DayOfWeek.ts  Event.ts  EventInput.ts  Image.ts  ImageEntityType.ts  ImageUploadInput.ts  ImportData.ts  ImportIngredient.ts  ImportRecipe.ts  ImportRecipeIngredient.ts  ImportResult.ts  Ingredient.ts  IngredientCost.ts  IngredientInput.ts  IngredientWaste.ts  MealEntryInput.ts  MealPlan.ts  MealPlanEntry.ts  MealPlanEntryWithRecipe.ts  MealPlanInput.ts  MealPlanShoppingList.ts  MealPlanWithEntries.ts  MealStats.ts  MealType.ts  MealTypeStat.ts  MissingIngredient.ts  Paginated.ts  ParsedReceiptItem.ts  PricePoint.ts  PriceQuote.ts  PriceQuoteInput.ts  (+41 more)
crates/core/src/: converter.rs  db.rs  domain.rs  lib.rs
crates/data/: Cargo.toml
crates/data/src/: db.rs  ingredient_repo.rs  lib.rs  recipe_repo.rs  stock_repo.rs
crates/entitlements/: Cargo.toml
crates/entitlements/src/: lib.rs
crates/tauri/: Cargo.toml
crates/tauri/src/: lib.rs
docs/: AUDIT.md  HANDOFF_AGENT.md
public/: manifest.json  sw.js
src/: App.css  App.tsx  main.tsx  router.tsx  theme.ts
src-tauri/: Cargo.toml  recipe_planner_dev.db  tauri.conf.json
src-tauri/.sqlx/: query-279c2d543fc55ac19d761105aa7f2972c00881d9ed128e16fe3677800266b1a3.json  query-2be20b5cda21b8edccdcea8ae346c2f5beeb8da6c551f4a73259599ddf15ac8b.json  query-37b4ef1c65a7f2cffe1c950acd0b57f89e64b7cc8028f2ddc3a980e43bdbccb7.json  query-54c6f9310906aef50c9f99109dde850078274af0154e90fe4572a50025378fa6.json  query-5ae3d19640b359a24e23d3f348f5767a74a833e06e9eb99d4e0a3efc175f7ccc.json  query-6e08689c283fe9b93ab38247109df948706c03cf57ba7d1e4f584adab4c97fc4.json  query-7fe49be6eda8df1a23e95f4e0eee89ecfb6f23e5f907c1884db233c9f188c04a.json  query-8a6bbf572bc457db96f65f6047faea9a4f3506b8ac572f57bf9603edad3ba9f6.json  query-a52861f0b92d03eb0309353df2c454dbe8afe19b33c8e12e6ec406cfe3067b79.json  query-a61a3acefde7de470a4ed20b30893485df4dd51a094fc58de04193c071317b86.json  query-aa436f8be029ca832d862e582385618aa0204a289b8c4804c5674b79d356b3fb.json  query-b10beedaa0183e8d3fed4dae403c5488263502a9b0df0e801929a8eb382db2e1.json  query-b19796432a9d27de8c23e02c90c1154dbaf60e946059ab5db9da6b3683dd2e24.json  query-b349aa046b457bf4e6e022673ae3faa7f42abd556eade58681afabadd974b408.json  query-b70f36d2b815fca80d361ce2babb7fb5a4fda56cd104bdccffff3aa67cfb852b.json  query-bc263d2b14db8eca6106f57455516527bc3903bd650c4264a043e3d56dc7c398.json  query-ca72e79865b282d45d88f8b9105f2d2412925ddb63bd96423a2ba4e96f972cac.json  query-cae1baed8ddbd2669b8ab60d10104f474c3e329e9adc80c25407c394c8658368.json  query-cd7f56ecedd764fbd16de631c0742ea5b7504f00b956d79235dd4765a1e84467.json  query-d04f1a59e9f5fb4196a424242cff2bf94579695aa29fb1bb2e80bef03f4c64ac.json  query-eaf746b3fcae6a0d446488fa8bf861118f17698d96211c982c5d57927e991c10.json  query-f5efdc76f9200809577ade9089c1afb6e47c9c79712541888f1d172d1b621549.json  query-f7c38da488241d7ba4ff45546b7fac899b380f0300d71d5e94117ee16e3708e8.json  query-fc21d404aaf2da239631c91d658e622709f4dd3005887a4a312ab75129df143d.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_stock.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: custos.rs  imagens.rs  ingredientes.rs  mod.rs  receitas.rs  relatorios.rs  stock.rs  sugestor.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: ImageUpload.tsx  IngredientAvatar.tsx  Layout.tsx  PageHeaderContext.tsx  PlaceholderPage.tsx  Sidebar.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx  Topbar.tsx
src/components/ui/: Avatar.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  ImagePlaceholder.tsx  ImageUpload.tsx  IngImg.tsx  Modal.tsx  PageHeader.tsx  SearchBar.tsx  SelectIngrediente.tsx  StatusPill.tsx  TagInput.tsx  Toast.tsx
src/i18n/: en.ts  index.tsx  pt.ts  registry.ts  types.ts
src/i18n/locales/: en.ts  pt.ts
src/lib/: devInvoke.ts  units.ts
src/pages/: Armazem.tsx  CalendarPage.tsx  CostsPage.tsx  Custos.tsx  DashboardPage.tsx  Definicoes.tsx  EventDetailPage.tsx  EventsPage.tsx  HelpPage.tsx  Importador.tsx  Ingredientes.tsx  IngredientsPage.tsx  MealPlannerPage.tsx  ReceiptScannerPage.tsx  ReceitaDetalhe.tsx  ReceitaForm.tsx  Receitas.tsx  RecipesPage.tsx  Relatorios.tsx  ReportsPage.tsx  SettingsPage.tsx  ShoppingListPage.tsx  StockPage.tsx  Sugestor.tsx  SuppliersPage.tsx
src/store/: themeStore.ts
src/styles/: theme.css
src/types/: index.ts
src/utils/: api.ts  ingredientDefaults.ts
sugestoes/: 01_seguranca.md  02_arquitetura.md  03_qualidade_codigo.md  04_testes.md  05_dependencias.md  06_performance.md  07_estetica.md  08_compliance.md  09_ideias.md  10_implementacoes.md  11_aproveitamento.md  12_documentacao.md
