[workspace]
resolver = "2"
members = ["crates/core", "crates/tauri", "src-tauri"]

[workspace.package]
edition = "2021"
version = "0.2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libsql = { version = "0.6", workspace = true }
tokio = { version = "1", features = ["rt", "macros", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "chrono"], workspace = true }
ts-rs = { version = "7", workspace = true }
image = "0.25"
mime_guess = "2"
dirs = "5"