[workspace]
resolver = "2"
members = ["crates/core", "crates/tauri", "src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = { version = "0.6" }
tokio = { version = "1", features = ["rt", "macros", "process"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "chrono"] }
ts-rs = { version = "7" }
dirs = "5"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
regex = "1"
rand = { version = "0.9", features = ["std_rng"] }