[package]
name = "recipe-planner"
version = "0.1.0"
description = "Recipe Planner — gestão de receitas e custos"
authors = ["you"]
edition = "2021"

[lib]
name = "recipe_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de dados
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Datas
chrono = { version = "0.4", features = ["serde"] }

# Erros
thiserror = "2"
anyhow = "1"

# Imagens
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

# Logging
log = "0.4"
env_logger = "0.11"
