[package]
name = "mise"
edition.workspace = true
version.workspace = true
description = "mise — gestão de receitas e custos para cozinhas"

[lib]
name = "mise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
mise-core = { path = "../crates/core" }
mise-data = { path = "../crates/data" }
mise-entitlements = { path = "../crates/entitlements" }
tokio = { workspace = true }
