[package]
name = "mise"
edition = "2021"
version.workspace = true
description = "mise — gestão de receitas e custos para cozinhas"

[lib]
name = "mise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
mise-core = { path = "../crates/core" }
mise-tauri = { path = "../crates/tauri" }
