[package]
name = "mise-core"
edition = "2021"
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
libsql = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
specta = { workspace = true }
ts-rs = { workspace = true }
image = { workspace = true }
mime_guess = { workspace = true }
dirs = { workspace = true }

[lib]
path = "src/lib.rs"