[package]
name = "mise-core"
edition = "2021"
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
libsql = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
specta = { workspace = true }
ts-rs = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }

[lib]
path = "src/lib.rs"