[package]
name = "mise-data"
edition.workspace = true
version.workspace = true

[dependencies]
mise-core = { path = "../core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
libsql = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
